test/files/neg/t779.check
t779.scala:6: error: method ast has return statement; needs result type
    override def ast = return null
                       ^
1 error
